# malelf

./: .gitignore  AUTHORS  ChangeLog  DRAFT_ARCH.txt  Makefile  Makefile.in  README.md  aclocal.m4  autogen.sh  clean_autoh3ll.sh  config.h  config.h.in  configure  configure.ac
.github/workflows/: ci.yml
autom4te.cache/: output.1  requests  traces.0  traces.1
data/: entry_off.db  sections.txt
doc/: Makefile.am  malelf  malelf.1
samples/: backdoor.asm  message32.asm  message64.asm  syscall.inc.asm  util.inc.asm
src/: .dissect.c.swp  .dissect.h.swp  Makefile.am  Makefile.in  analyse.c  analyse.h  analyze.c  analyze.h  database.c  database.h  defines.h  disas.c  disas.h  dissect.c  dissect.h  dynamic_analysis.c  dynamic_analysis.h  dynanalyse_config.h  globals.c  globals.h  infect.c  infect.h  ioctls.h  linux_syscalls.h  main.c  malelf.1  messages.h  sctab-list.h  shellcode.c  shellcode.h  table.c  table.h  util.c  util.h
